# Tabletennis

./: .gitignore  README.md  activate
gazebo/: CMakeLists.txt  activate  ball_rand_vel.cc  launch  table_tennis.world  training_env_a.cc  training_return_plugin.cc
gazebo/models/ping_pong_ball/: ping_pong_ball.sdf
gazebo/models/ping_pong_ball/meshes/: ball.dae
gazebo/models/ping_pong_racket/: ping_pong_racket.sdf
gazebo/models/ping_pong_table/: ping_pong_table.sdf
gazebo/models/ping_pong_table_net/: model.config  ping_pong_table_net.sdf
gazebo/models/ping_pong_table_net/meshes/: net.dae
gazebo/models/ping_pong_table_no_net/: ping_pong_table_no_net.sdf
gazebo/plugins/: ball_plugin.cc  training_return_plugin.cc
gazebo/tests/: spawn_ball.cc
ros/src/tabletennis/: CMakeLists.txt  package.xml
src/iiwa_stack/iiwa_control/config/: iiwa_control.yaml
src/iiwa_stack/iiwa_control/src/: simple_trajectory.py
src/iiwa_stack/iiwa_description/urdf/: iiwa.gazebo.xacro  iiwa7.xacro
src/iiwa_stack/iiwa_description/urdf/backup/: iiwa7.xacro
src/iiwa_stack/iiwa_tool_description/meshes/: ping_pong_racket.sdf  ping_pong_racket.urdf
src/iiwa_stack/iiwa_tool_description/meshes/visual/: racket.dae
src/iiwa_stack/iiwa_tool_description/urdf/: iiwa_tool.urdf.xacro
src/table_tennis/: CMakeLists.txt  package.xml  start
src/table_tennis/launch/: agent.launch  iiwa_ros_tester.launch  ik_solver.launch  table_tennis_world.launch
src/table_tennis/models/ping_pong_ball/: model.config  ping_pong_ball.sdf
src/table_tennis/models/ping_pong_racket/: model.config  ping_pong_racket.sdf
src/table_tennis/models/ping_pong_table/: model.config  ping_pong_table.sdf
src/table_tennis/models/ping_pong_table_net/: ping_pong_table_net.sdf
src/table_tennis/models/ping_pong_table_no_net/: model.config  ping_pong_table_no_net.sdf
src/table_tennis/nn/: action_net.pt  dqn.py
src/table_tennis/plugins/: training_return_plugin.cc
src/table_tennis/scripts/: ik_solver.cpp  table_tennis_agent.cpp  table_tennis_agent.py
src/table_tennis/srv/: CommandAgent.srv  ResetWorld.srv  SolveFKPose.srv  SolveIKPose.srv  SolveIKVelocity.srv  StepWorld.srv
src/table_tennis/tests/: iiwa_ros_test.cpp  iiwa_ros_test.py  kdl_test.cpp  kuka_control.py  moveit_tests.py  request_pose.py  spawn_ball.cc  trajectory_test.py
src/table_tennis/worlds/: table_tennis.world
